--- a/codes/k8/frontend-deployment.yaml
+++ b/codes/k8/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: successtech/nimc-frontend:day5
+        image: successtech/bbf5:latest
         ports:
         - containerPort: 80
         volumeMounts:
