--- a/codes/k8/backend-deployment.yaml
+++ b/codes/k8/backend-deployment.yaml
@@ -19,7 +19,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: successtech/bbb5:latest
+        image: successtech/bcb5:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
