--- a/codes/k8/db-deployment.yaml
+++ b/codes/k8/db-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - sh
             - -c
             - "exec pg_isready -h localhost -U $POSTGRES_USER -d $POSTGRES_DB"
-          initialDelaySeconds: 30
+          initialDelaySeconds: 90
           periodSeconds: 10
         livenessProbe:
           exec:
@@ -57,7 +57,7 @@ spec:
             - sh
             - -c
             - "exec pg_isready -h localhost -U $POSTGRES_USER -d $POSTGRES_DB"
-          initialDelaySeconds: 45
+          initialDelaySeconds: 75
           periodSeconds: 20
       volumes:
       - name: postgres-storage
@@ -86,10 +86,10 @@ data:
         );
         
         INSERT INTO users (username, password, email) VALUES 
-        ('sadiq', 'password123', 'sadiq@nimc.gov.ng'),
-        ('precious', 'nimc2025', 'precious@nimc.gov.ng'),
-        ('kenneth', 'nigeria123', 'kenneth@nimc.gov.ng'),
-        ('muhammed', 'officer123', 'muhd@nimc.gov.ng')
+        ('mesembe', 'mesembe123', 'mesembe@nimc.gov.ng'),
+        ('hawa', 'hawa123', 'hawa@nimc.gov.ng'),
+        ('eugene', 'eugene123', 'eugene@nimc.gov.ng'),
+        ('azzaki', 'azzaki123', 'azzaki@nimc.gov.ng')
         ON CONFLICT (username) DO UPDATE SET
             password = EXCLUDED.password,
             email = EXCLUDED.email;
